major scaffolding of packages, utils, configs, user registration and JWT authentication

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
-.gitattributes
 .java-version
 mvnw
 mvnw.cmd
-pom.xml
 .mvn/wrapper/maven-wrapper.properties
+
+logs/
