--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-test-junit5</artifactId>
 			<scope>test</scope>
@@ -190,6 +195,7 @@
 						</goals>
 						<configuration>
 							<sourceDirs>
+								<sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
 								<sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
 								<sourceDir>${project.basedir}/target/generated-sources/kapt/compile</sourceDir>
 							</sourceDirs>
